--- a/style.css
+++ b/style.css
@@ -1,55 +1,57 @@
 <style>
-  body {
-    margin:0px;
-  }
+    body {
+    }
 
-  #grid {
+    body {
+    margin:0px;
+    }
+
+    #grid {
     display: grid;
     grid-template-columns: 150px 1fr;
-  }
+    }
 
-  #grid #article {
-    padding-left: 25px;
-  }
-
-  #grid ol {
+    #grid dl {
     border-right:1px solid gray;
     width:100px;
     margin:0px;
     padding: 20px;
     padding-left:30px;
-  }
+    }
 
-  @media(max-width:800px) {
+    #grid #article {
+    padding-left: 25px;
+    }
+
+    @media(max-width:800px) {
     #grid {
       display: block;
     }
 
-    #grid ol {
+    #grid dl {
       display: block;
       border-right:none;
     }
-  }
+    }
 
-  #active {
+    #active {
     color:red;
-  }
+    }
 
-  .saw {
+    .saw {
     color:gray;
-  }
+    }
 
-  a {
-    color:black;
+    a {
+    color:gray;
     text-decoration: none;
-  }
+    }
 
-  h1 {
+    h1 {
     font-size:60px;
     text-align: center;
     border-bottom:1px solid gray;
     margin:0px;
     padding:20px;
-  }
-
+    }
 </style>
